--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<h1>Home</h1>
-<a routerLink="/">Home</a><br>
+<h1>Landing Page</h1>
+<a routerLink="/home">Home</a><br>
 <a routerLink="/employee">Employee</a><br>
-<a routerLink="/student">Student</a>
+<a routerLink="/student">Student</a><br>
+<a routerLink="/citycard">City</a>
 <router-outlet></router-outlet>
 <!-- <app-employee></app-employee> -->
