--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <a routerLink="/home">Home</a><br>
 <a routerLink="/employee">Employee</a><br>
 <a routerLink="/student">Student</a><br>
-<a routerLink="/citycard">City</a>
+<a routerLink="/citycard">City</a><br>
+<a routerLink="/test">Test</a>
 <router-outlet></router-outlet>
 <!-- <app-employee></app-employee> -->
