api get,post,delete and put half done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
-<h1>Landing Page</h1>
+<div margin="100px">
+    <h1>Landing Page</h1>
 <a routerLink="/home">Home</a><br>
 <a routerLink="/employee">Employee</a><br>
 <a routerLink="/student">Student</a><br>
 <a routerLink="/citycard">City</a><br>
-<a routerLink="/test">Test</a>
+<a routerLink="/test">Test</a><br>
+<a routerLink="/user">User</a>
 <router-outlet></router-outlet>
+</div>
 <!-- <app-employee></app-employee> -->
