all crud operation via web api done

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,25 +1,3 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-    </ul>
-  </div>
-</nav> -->
 <div class="container mt-3">
   <form [formGroup]="userForm" (ngSubmit)="SubmitForm()">
     <div class="form-group">
@@ -39,11 +17,10 @@
       <input type="text" class="form-control" formControlName="age" placeholder="Age">
     </div>
     <br>
-    <button type="submit" class="btn btn-primary">Add</button>
+    <button type="submit" class="btn btn-primary">{{ userForm.value.id ? 'Update' : 'Add' }}</button>
     <button type="button" class="btn btn-secondary" (click)="userForm.reset()">Reset</button>
   </form>
 
-  <!-- User List Table Under Buttons -->
   <div class="mt-5">
     <h3>User List</h3>
     <table class="table table-bordered mt-2">
@@ -56,13 +33,6 @@
         </tr>
       </thead>
       <tbody>
-        <!-- <tr>
-            <td>arif</td>
-            <td>0191182822</td>
-            <td>a@gmail.com</td>
-            <td>22</td>
-            
-        </tr> -->
         <tr *ngFor="let user of users">
           <td>{{ user.name }}</td>
           <td>{{ user.mobile }}</td>
