--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,12 @@
-<div margin="100px">
-    <h1>Landing Page</h1>
-<a routerLink="/home">Home</a><br>
-<a routerLink="/employee">Employee</a><br>
-<a routerLink="/student">Student</a><br>
-<a routerLink="/citycard">City</a><br>
-<a routerLink="/test">Test</a><br>
-<a routerLink="/user">User</a>
-<router-outlet></router-outlet>
+<h1>Landing Page</h1>
+
+<div class="nav-container">
+  <a routerLink="/home" routerLinkActive="active">Home</a>
+  <a routerLink="/employee" routerLinkActive="active">Employee</a>
+  <a routerLink="/student" routerLinkActive="active">Student</a>
+  <a routerLink="/citycard" routerLinkActive="active">City</a>
+  <a routerLink="/test" routerLinkActive="active">Test</a>
+  <a routerLink="/user" routerLinkActive="active">User</a>
 </div>
-<!-- <app-employee></app-employee> -->
+
+<router-outlet></router-outlet>
